@@ -21,7 +21,7 @@
 const unsigned startup_code = 230;
 const char program[] = "twoftpd-xfer";
 
-verb verbs[] = {
+const verb verbs[] = {
   { "TYPE", 0, 0,           handle_type },
   { "STRU", 0, 0,           handle_stru },
   { "MODE", 0, 0,           handle_mode },
@@ -54,4 +54,9 @@ verb verbs[] = {
   { "PASS", 1, 0,           handle_pass },
   { "ACCT", 0, 0,           handle_pass },
   { 0,      0, 0,           0 }
+};
+
+const verb site_commands[] = {
+  { "CHMOD", 0, 0, handle_site_chmod },
+  { 0,       0, 0, 0 }
 };
